Fixed the misaligned search box in the mobile view.

--- a/docs/.vuepress/theme/styles/theme-dark.styl
+++ b/docs/.vuepress/theme/styles/theme-dark.styl
@@ -115,7 +115,6 @@ html.theme-dark {
   /* Sidebar */
   .sidebar {
     scrollbar($scrollbarBackgroundColor, $scrollbarThumbColor, $scrollbarThumbColorHover)
-    border-right-color $sectionBorderColor
 
     // sidebar collapsible headings
     & .sidebar-heading {
